--- a/index.html
+++ b/index.html
@@ -68,24 +68,8 @@
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
 			    
 			    <!-- Post Page -->
-			<div class="container">
-		<div class="card-content">
-			<div class="card">
-				<div class="card-image"> <img src="1.jpg" alt=""> </div>
-				<div class="card-info">
-				<h3>Card 01</h3>
-				<p>wwwwwwwwwwwwwwwwwwwww</p>
-				</div>
-			</div>
-			<div class="card">
-				<div class="card-image"> <img src="2.jpg" alt=""> </div>
-				<div class="card-info">
-				<h3>Card 02</h3>
-				<p>wwwwwwwwwwwwwwwwwwwww</p>
-				</div>
-			</div>
-		</div>
-	</div>
+		<div class="profile">
+        </div>
                         <h1 class="title pb-3 mb-5">About Me</h1>
                         <p>Diam rebum sea stet rebum ea. Et kasd amet et accusam elitr voluptua. Tempor dolore sit et accusam ipsum erat duo. Gubergren et takimata dolor duo amet et sanctus elitr lorem. Ipsum amet duo rebum dolor labore. No diam duo lorem elitr dolor takimata elitr no. Magna et gubergren duo ipsum sed, amet ea voluptua dolores voluptua dolor ipsum et. Sit takimata erat consetetur invidunt lorem consetetur. Lorem magna diam vero nonumy. Aliquyam diam voluptua magna et magna nonumy. Accusam rebum clita et sit vero lorem, voluptua amet sit eos no et labore vero, et consetetur justo et et sit aliquyam labore, sit erat lorem justo dolores kasd est sit. Dolor et accusam ea et dolor sit.</p>
                         <div class="row mb-4">
@@ -475,4 +459,12 @@
         <!-- Template Javascript -->
         <script src="js/main.js"></script>
     </body>
+	<script type="text/javascript">
+    xHttpOP = new XMLHttpRequest()
+    xHttpOP.onload = function(){
+      document.querySelector('.profile').innerHTML = this.responseText;
+    }
+    xHttpOP.open('GET','profile.html');
+    xHttpOP.send();
+</script>
 </html>
