--- a/profile.html
+++ b/profile.html
@@ -24,17 +24,32 @@
 				<p>wwwwwwwwwwwwwwwwwwwww</p>
 				</div>
 			</div>
+				<div class="card">
+					<div class="card-image"> <img src="1.jpg" alt=""> </div>
+					<div class="card-info">
+					<h3>Card 03</h3>
+					<p>wwwwwwwwwwwwwwwwwwwww</p>
+					</div>
+				</div>
+					<div class="card">
+						<div class="card-image"> <img src="2.jpg" alt=""> </div>
+						<div class="card-info">
+						<h3>Card 04</h3>
+						<p>wwwwwwwwwwwwwwwwwwwww</p>
+						</div>
+					</div>
+			</div>
 		</div>
 	</div>
 	<div class="pagination">
-		<li class="page-item previous-page"><a class="page-link" href="#">prev</a></li>
-		<li class="page-item current-page"><a class="page-link" href="#">1</a></li>
+		<li class="page-item previous-page disable"><a class="page-link" href="#">prev</a></li>
+		<li class="page-item current-page active"><a class="page-link" href="#">1</a></li>
 		<li class="page-item dots"><a class="page-link" href="#">...</a></li>
 		<li class="page-item current-page"><a class="page-link" href="#">5</a></li>
 		<li class="page-item current-page"><a class="page-link" href="#">6</a></li>
 		<li class="page-item dots"><a class="page-link" href="#">...</a></li>
 		<li class="page-item current-page"><a class="page-link" href="#">10</a></li>
-		<li class="page-item current-page"><a class="page-link" href="#">Next</a></li>
+		<li class="page-item next-page"><a class="page-link" href="#">Next</a></li>
 		</div>
 	
 	
